# Adafruit_CircuitPython_SPS30

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py
.github/workflows/: release_gh.yml
