# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
# SPDX-FileCopyrightText: 2021 Kevin J. Walters
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-circuitpython-sps30"
description = "Helper library for the SPS30 particulate matter sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/kevinjwalters/Adafruit_CircuitPython_SPS30"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "sps30",
    "particulate",
    "matter",
    "pm2.5",
    "air",
    "quality",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# Da adafruit_sps30 ein Package (Ordner) ist, nicht nur ein einzelnes Modul:
packages = ["adafruit_sps30"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
target-version = ['py35']